Refactored all of the classes and README.